--- a/res.css
+++ b/res.css
@@ -42,8 +42,7 @@
 		-webkit-box-direction: normal;
 		-ms-flex-direction: column;
 		flex-direction: column;
-		gap: 2rem !important;
-                z-index: 500;
+		gap: 1.2rem !important;
 		-webkit-transform: translateX(200%);
 		transform: translateX(200%);
 		-webkit-transition: -webkit-transform 0.9s
@@ -54,8 +53,8 @@
 			-webkit-transform 0.9s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 	}
 	nav .linkSec a {
-		border-bottom: 1.2px solid whitesmoke;
-		font-size: 1.5rem;
+		border-bottom: 1px solid #9590908c;
+		font-size: 1.2rem;
 		font-weight: 500;
 		color: whitesmoke;
 		cursor: pointer;
@@ -63,8 +62,8 @@
 		-moz-user-select: none;
 		-ms-user-select: none;
 		user-select: none;
-		padding: 0.3rem 0.6rem;
-		letter-spacing: 3px;
+		padding: 0.3rem 0;
+		letter-spacing: 1px;
 	}
 	nav .linkSec a:hover {
 		color: #5e5b5b;
@@ -87,8 +86,8 @@
 		width: 100% !important;
 	}
 	.heroSection .content h1 {
-		font-size: 2.2rem;
-		letter-spacing: 4px;
+		font-size: 2rem;
+		letter-spacing: 5px;
 	}
 	.heroSection .content p {
 		font-size: 1rem;
@@ -122,7 +121,7 @@
 		height: 320px;
 	}
 	.team .slider .item .teamPic {
-		height: 80%;
+		height: 70%;
 	}
 	#contact .contactHeader h1 {
 		font-size: 2rem;
@@ -144,23 +143,6 @@
 	.upArrow {
 		right: 39px;
 		bottom: 35px;
-		font-size: 1.4rem;
-		z-index: 300;
-		background-color: #6366f1;
-		font-weight: 900;
-		height: 45px;
-		width: 45px;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-webkit-box-pack: center;
-		-ms-flex-pack: center;
-		justify-content: center;
-		-webkit-box-align: center;
-		-ms-flex-align: center;
-		align-items: center;
-		color: whitesmoke;
-		border-radius: 10px;
 	}
 }
 /*# sourceMappingURL=res.css.map */
