--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@ nav {
 }
 
 nav .heading {
-	font-size: 1.5rem;
-	letter-spacing: 3px;
+	font-size: 1.6rem;
+	letter-spacing: 2px;
 	cursor: pointer;
 	-webkit-user-select: none;
 	-moz-user-select: none;
@@ -89,6 +89,7 @@ nav .bars {
 
 nav .linkSec a {
 	letter-spacing: 2px;
+	font-weight: 500 !important;
 }
 
 .heroSection .owl-theme {
@@ -283,8 +284,8 @@ footer .container #icon .fab {
 
 .upArrow {
 	position: fixed;
-	-webkit-transform: translateX(-1000%);
-	transform: translateX(-1000%);
+	-webkit-transform: translateX(300%);
+	transform: translateX(300%);
 	right: 60px;
 	bottom: 60px;
 	font-size: 1.5rem;
